<resources>
    <string name="app_name">The Modern Cpp Challenge</string>
    <string name="problem_with_number">Problem %1$d</string>
    <string name="editText_number_hint">Please enter a number.</string>
    <string name="button_add">ADD</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_previous">PREVIOUS</string>
    <string name="button_next">NEXT</string>
    <string name="button_menu">MENU</string>
    <string name="result">Result:</string>
    <string name="result_placeholder">Result: %1$s</string>
    <string name="problem_title_unknown">Please specify a problem title.</string>
    <string name="problem_text_unknown">Please specify a problem text.</string>
    <string name="problem_1_title">Sum of naturals divisible by 3 and 5.</string>
    <string name="problem_1_text">Write a program that calculates and prints the sum of all natural numbers divisible by either 3 or 5, up to a given limit entered by the user.</string>
    <string name="problem_2_title">Greatest common divisor.</string>
    <string name="problem_2_text">Write a program that, given two positive integers, will calculate and print the greatest common divisor of the two.</string>
    <string name="problem_3_title">Least Common Multiplier.</string>
    <string name="problem_3_text">Write a program that will, given two or more positive integers, calculate and print the least common multiplier of them all.</string>
    <string name="problem_3_current_calculation">lcm(%1$s)</string>
    <string name="problem_4_title">Largest prime smaller than given number.</string>
    <string name="problem_4_text">Write a program that computes and prints the largest prime number that is smaller then a number provided by the user, which must be a positive integer.</string>
    <string name="problem_5_title">Sexy prime pairs.</string>
    <string name="problem_5_text">Write a program that prints all sexy prime pairs up to a limit entered by the user.</string>
    <string name="problem_6_title">Abundant numbers.</string>
    <string name="problem_6_text">Write a program that prints all abundant numbers and their abundance, up to a number entered by the user.</string>
</resources>
